--- a/.github/workflows/parallel-bughunt.yml
+++ b/.github/workflows/parallel-bughunt.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       domain:
-        description: 'Target domain (مثلا: m.romwe.com)'
+        description: 'Target domain'
         required: true
 
 jobs:
@@ -18,6 +18,24 @@ jobs:
       - name: Set script permissions
         run: chmod +x main.sh
 
+      - name: Install golang
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.22'
+
+      - name: Install required tools
+        run: |
+          go install github.com/hakluke/waybackurls@latest
+          go install github.com/lc/gau/v2/cmd/gau@latest
+          go install github.com/projectdiscovery/httpx/cmd/httpx@latest
+          go install github.com/Sh1Yo/x8@latest
+          go install github.com/Emoe/kxss@latest
+          go install github.com/tomnomnom/unfurl@latest
+          go install github.com/tomnomnom/anew@latest
+          export PATH=$PATH:$(go env GOPATH)/bin
+          echo 'export PATH=$PATH:$(go env GOPATH)/bin' >> $GITHUB_ENV
+
       - name: Run bash script
         run: |
+          export PATH=$PATH:$(go env GOPATH)/bin
           ./main.sh ${{ github.event.inputs.domain }}
