--- a/.github/workflows/parallel-bughunt.yml
+++ b/.github/workflows/parallel-bughunt.yml
@@ -18,39 +18,82 @@ jobs:
       - name: Set script permissions
         run: chmod +x main.sh
 
-      - name: Install required tools
+      - name: Install all bugbounty tools
         run: |
-          # Install waybackurls
-          wget -q -O /usr/local/bin/waybackurls https://github.com/hakluke/waybackurls/releases/latest/download/waybackurls-linux-amd64
+          set -e
+
+          # waybackurls (tomnomnom)
+          curl -s https://api.github.com/repos/tomnomnom/waybackurls/releases/latest \
+            | grep "browser_download_url.*linux-amd64" \
+            | grep -o 'https://[^"]*' \
+            | head -n1 \
+            | xargs -I{} wget -O waybackurls.tgz {}
+          tar -xzf waybackurls.tgz
+          mv waybackurls /usr/local/bin/
           chmod +x /usr/local/bin/waybackurls
 
-          # Install gau
-          wget -q -O /usr/local/bin/gau https://github.com/lc/gau/releases/latest/download/gau-linux-amd64
-          chmod +x /usr/local/bin/gau
-
-          # Install httpx
-          wget -q -O /usr/local/bin/httpx https://github.com/projectdiscovery/httpx/releases/latest/download/httpx-linux-amd64
-          chmod +x /usr/local/bin/httpx
-
-          # Install x8
-          wget -q -O /usr/local/bin/x8 https://github.com/Sh1Yo/x8/releases/latest/download/x8_linux_amd64
-          chmod +x /usr/local/bin/x8
-
-          # Install kxss
-          wget -q -O /usr/local/bin/kxss https://github.com/Emoe/kxss/releases/latest/download/kxss-linux-amd64
-          chmod +x /usr/local/bin/kxss
-
-          # Install unfurl
-          wget -q -O /usr/local/bin/unfurl https://github.com/tomnomnom/unfurl/releases/latest/download/unfurl-linux-amd64
-          chmod +x /usr/local/bin/unfurl
-
-          # Install anew
-          wget -q -O /usr/local/bin/anew https://github.com/tomnomnom/anew/releases/latest/download/anew-linux-amd64
+          # anew
+          curl -s https://api.github.com/repos/tomnomnom/anew/releases/latest \
+            | grep "browser_download_url.*linux-amd64" \
+            | grep -o 'https://[^"]*' \
+            | head -n1 \
+            | xargs -I{} wget -O anew.tgz {}
+          tar -xzf anew.tgz
+          mv anew /usr/local/bin/
           chmod +x /usr/local/bin/anew
 
-          # Install jq, moreutils for helpers (required by some scripts)
-          sudo apt update
-          sudo apt install -y jq moreutils
+          # unfurl
+          curl -s https://api.github.com/repos/tomnomnom/unfurl/releases/latest \
+            | grep "browser_download_url.*linux-amd64" \
+            | grep -o 'https://[^"]*' \
+            | head -n1 \
+            | xargs -I{} wget -O unfurl.tgz {}
+          tar -xzf unfurl.tgz
+          mv unfurl /usr/local/bin/
+          chmod +x /usr/local/bin/unfurl
+
+          # gau
+          curl -s https://api.github.com/repos/lc/gau/releases/latest \
+            | grep "browser_download_url.*gau-linux-amd64" \
+            | grep -o 'https://[^"]*' \
+            | head -n1 \
+            | xargs -I{} wget -O /usr/local/bin/gau {}
+          chmod +x /usr/local/bin/gau
+
+          # httpx
+          curl -s https://api.github.com/repos/projectdiscovery/httpx/releases/latest \
+            | grep "browser_download_url.*linux_amd64" \
+            | grep -o 'https://[^"]*' \
+            | head -n1 \
+            | xargs -I{} wget -O /usr/local/bin/httpx {}
+          chmod +x /usr/local/bin/httpx
+
+          # kxss
+          curl -s https://api.github.com/repos/Emoe/kxss/releases/latest \
+            | grep "browser_download_url.*linux-amd64" \
+            | grep -o 'https://[^"]*' \
+            | head -n1 \
+            | xargs -I{} wget -O /usr/local/bin/kxss {}
+          chmod +x /usr/local/bin/kxss
+
+          # x8
+          curl -s https://api.github.com/repos/Sh1Yo/x8/releases/latest \
+            | grep "browser_download_url.*x86_64-linux-x8" \
+            | grep -o 'https://[^"]*' \
+            | head -n1 \
+            | xargs -I{} wget -O x8.tar.gz {}
+          tar -xzf x8.tar.gz
+          mv x8 /usr/local/bin/
+          chmod +x /usr/local/bin/x8
+
+          # jq, moreutils for helpers
+          sudo apt update && sudo apt install -y jq moreutils
+
+          # check versions
+          for tool in waybackurls anew unfurl gau httpx kxss x8 jq; do
+            echo "Checking $tool version:"
+            $tool --help | head -n 2
+          done
 
       - name: Check installed tools (diagnose)
         run: |
@@ -60,8 +103,7 @@ jobs:
           echo "All tools installed."
 
       - name: Run bug bounty main.sh
-        run: |
-          ./main.sh "${{ github.event.inputs.domain }}"
+        run: ./main.sh "${{ github.event.inputs.domain }}"
 
       - name: Upload result (Recon Output)
         uses: actions/upload-artifact@v4
